# Ops-Asset-Manager

./: .gitignore  QWEN.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  minio.rs  ssh.rs
src/components/: AssetManager.tsx  ChatAgent.tsx  CommandPalette.tsx  FileManager.tsx  MinioBrowser.tsx  MinioDialog.tsx  MinioManager.tsx  RichInputBar.tsx  ServerDialog.tsx  ServerStatsPanel.tsx  SettingsView.tsx  Sidebar.tsx  SnippetBar.tsx  SnippetsManager.tsx  TerminalView.tsx
src/stores/: store.ts
src/theme/: presets.ts  theme.ts
src/types/: index.ts
src/utils/: commandSpecs.ts  completion.ts  id.ts  terminalRegistry.ts
