[package]
name = "rsm-ssh"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsm_ssh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.46"
russh-sftp = "2.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
quick-xml = { version = "0.36", features = ["serialize"] }
percent-encoding = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
